Fixes padding for featured quotes on mobile case study pages.

--- a/themes/rca-inc/style.css
+++ b/themes/rca-inc/style.css
@@ -2989,7 +2989,7 @@ input#search-input {
     width: auto;
     padding: 20px;
     display: block;
-    margin: 20px 0;
+    margin: 3rem 0;
   }
   .case-study-quote p{
     font-size: 1rem;
